--- a/EKS/ConfigurationFiles/service.yaml
+++ b/EKS/ConfigurationFiles/service.yaml
@@ -1,15 +1,17 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: nginx
+  name: nginx-service
   labels:
     app: nginx
 spec:
-  ports:
-  - name: http
-    port: 80
-    protocol: TCP
-    targetPort: 80
+  type: LoadBalancer
   selector:
     app: nginx
-  type: LoadBalancer
+  ports:
+    - name: http
+      port: 80
+      protocol: TCP
+      targetPort: 80
+   
+  
